--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -22,6 +22,88 @@
                 </h1>
                 <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
-        </header>  
+        </header> 
+        
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-8">
+                    <h2 class="heading-secondary">
+                        Exciting Tours for Adventurous People   
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        text content
+                    </div>
+                    <div class="col-1-of-2">
+                        image Content
+                    </div>
+                </div>   
+            </section>
+        </main>
+        <!--
+        <sectiion class="grid-test">
+            <div class="row">
+                <div class="col-1-of-2">
+                    Col 1 of 2
+                </div>
+                <div class="col-1-of-2">
+                    Col 1 of 2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>   
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>   
+                <div class="col-2-of-3">
+                    Col 2 of 3
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>   
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>   
+                <div class="col-1-of-4">
+                    Col 1 of 4
+                </div>
+                <div class="col-2-of-4">
+                    Col 2 of 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">
+                    Col 1 of 3
+                </div>   
+                <div class="col-3-of-4">
+                    Col 3 of 4
+                </div>
+            </div>
+        </sectiion>
+        -->
     </body>
 </html>
