--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -26,14 +26,31 @@
         
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting Tours for Adventurous People   
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Your going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Unde iste, laboriosam non minima harum impedit repellat 
+                            vel reprehenderit.
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                             Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Id dolore provident. Sunt natus veritatis cumque et excepturi.
+                        </p>
+                        <a href="#" class="btn-text">   
+                            Learn more &rarr;
+                        </a>
                     </div>
                     <div class="col-1-of-2">
                         image Content
